--- a/FirstPlaybook/facts-playbook.yml
+++ b/FirstPlaybook/facts-playbook.yml
@@ -18,7 +18,7 @@
       nxos_config: 
         backup: yes
         lines:
-          - hostname Changed-NXOS
+          - hostname NX01
 
     - name: Get changed config for NXOS devices
       nxos_facts:
